@@ -262,21 +262,24 @@ public class OverseerCollectionProcessor implements Runnable {
       for (Map.Entry<String,Replica> shardEntry : shardEntries) {
         final ZkNodeProps node = shardEntry.getValue();
         if (clusterState.liveNodesContain(node.getStr(ZkStateReader.NODE_NAME_PROP))) {
-          params.set(CoreAdminParams.CORE, node.getStr(ZkStateReader.CORE_NAME_PROP));
-
-          String replica = node.getStr(ZkStateReader.BASE_URL_PROP);
-          ShardRequest sreq = new ShardRequest();
-          // yes, they must use same admin handler path everywhere...
-          params.set("qt", adminPath);
-
-          sreq.purpose = 1;
-          // TODO: this sucks
-          if (replica.startsWith("http://")) replica = replica.substring(7);
-          sreq.shards = new String[] {replica};
-          sreq.actualShards = sreq.shards;
-          sreq.params = params;
-          log.info("Collection Admin sending CoreAdmin cmd to " + replica);
-          shardHandler.submit(sreq, replica, sreq.params);
+        	//For thread safety, only  simple clone the ModifiableSolrParams
+            ModifiableSolrParams cloneParams = new ModifiableSolrParams();
+            cloneParams.add(params);
+            cloneParams.set(CoreAdminParams.CORE, node.getStr(ZkStateReader.CORE_NAME_PROP));
+            
+            String replica = node.getStr(ZkStateReader.BASE_URL_PROP);
+            ShardRequest sreq = new ShardRequest();
+            
+            // yes, they must use same admin handler path everywhere...
+            cloneParams.set("qt", adminPath);
+            sreq.purpose = 1;
+            // TODO: this sucks
+            if (replica.startsWith("http://")) replica = replica.substring(7);
+            sreq.shards = new String[] {replica};
+            sreq.actualShards = sreq.shards;
+            sreq.params = cloneParams;
+            log.info("Collection Admin sending CoreAdmin cmd to " + replica + " params:" + sreq.params);
+            shardHandler.submit(sreq, replica, sreq.params);
         }
       }
     }
